--- a/index_zw.html
+++ b/index_zw.html
@@ -170,7 +170,7 @@
 		<b>Juncheng Li</b>, Zehua Pei, and Tieyong Zeng*.
 		<p><em>arXiv 2109.14335</em>, 2021.<br>
 		<a href="paper/SISR_2021.pdf", target="_blank">[论文]</a>
-		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[项目主页]</a>
+		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -206,7 +206,7 @@
 		<font color="red">MSRN模型的改进版本。SCI-2区。</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[项目主页]</a>
+		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -225,7 +225,7 @@
 		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区。</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[项目主页]</a>
+		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -244,7 +244,7 @@
 		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区。</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[项目主页]</a>
+		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -313,7 +313,7 @@
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[项目主页]</a>
+		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
