--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">SCI-1.</font><br>
 		<a href="paper/FBSNet.pdf", target="_blank">[Paper]</a>
+		<a href="https://guangweigao.github.io/TMM22/FBSNet.html", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -373,7 +374,8 @@
 		<font color="red">Top artificial intelligence conference.</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[Paper]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[Poster]</a>
-        <a href="https://github.com/IVIPLab/FDIWN", target="_blank">[Code]</a>
+		<a href="https://github.com/IVIPLab/FDIWN", target="_blank">[Code]</a>
+		<a href="https://guangweigao.github.io/AAAI22/FDIWN.html", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
 	<tr></tr>
