--- a/index_zw.html
+++ b/index_zw.html
@@ -293,6 +293,7 @@
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">SCI-1区。</font><br>
 		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
+		<a href="https://guangweigao.github.io/TMM22/FBSNet.html", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -365,7 +366,8 @@
 		<font color="red">人工智能顶会.</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[论文]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[海报]</a>
-        <a href="https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
+		<a href="https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
+		<a href="https://guangweigao.github.io/AAAI22/FDIWN.html", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
