--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
 <h2>News</h2>
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
-<h3>2018-Now, 22 Papers, 3 Challenge Reports</h3>
+<h3>2018-Now, 23 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>------Postdoctoral------</td></tr> 
+		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	
 		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
