--- a/index_zw.html
+++ b/index_zw.html
@@ -71,10 +71,11 @@
 
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
-<h3>2018-现在，22篇论文，3篇比赛报告</h3>
+<h3>2018-现在，23篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>----------博后期间----------</td></tr> 
+		<tr><td>一篇论文已被 Neurocomputing, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IJCAI, 2022.</td></tr> 
 		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	
 		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
