--- a/index_zw.html
+++ b/index_zw.html
@@ -300,6 +300,21 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ASRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Adjustable Super-Resolution Network via Deep Supervised Learning and Progressive Self-Distillation<font color="red">【New】</font></a><br>
+		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang
+		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
+		<font color="red">SCI-2.</font><br>
+		<a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 </tbody></table>
 
 <h4>会议论文</h4></table>
