--- a/projects/IRE/index.html
+++ b/projects/IRE/index.html
@@ -81,7 +81,7 @@ var _hmt = _hmt || [];
 	<li>
 		<div style="float:left; text-align:left">An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</div><br>
 		Kangfu Mei, Aiwen Jiang*, <b>Juncheng Li</b>, Jihua Ye, Mingwen Wang<br>
-		<em>International Conference on Neural Information Processing</em> (<i><b>IJCNN</b></i>), 2018. 
+		<em>International Conference on Neural Information Processing</em> (<i><b>ICONIP</b></i>), 2018. 
 	</li>
 	<br>
 	<li>
