--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published more than 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published more than 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 international journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL.
 </p>
 
 
@@ -161,7 +161,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 790] [Highest Citation: 411] </h2>
+<h2>Selected Publications [Total Citations: 807] [Highest Citation: 418] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
@@ -226,7 +226,7 @@
 		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
-		<font color="red">First contributor, Author names alphabetically.</font><br> 
+		<font color="red">Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
@@ -245,7 +245,7 @@
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoising</a><br>
 		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng*, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
-		<font color="red">First contributor, Author names alphabetically.</font><br> 
+		<font color="red">Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
