--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published more than 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 international journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the PhD from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published more than 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. I received several premium awards, including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 international journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL.
 </p>
 
 
@@ -120,7 +120,7 @@
 		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
 		<tr><td>Doctoral Research and Innovation Fund Project, East China Normal University, 2020.</td></tr> 	
 		<tr><td>Graduate Scholarship, East China Normal University, 2016-2020.</td></tr> 	
-		<tr><td>ICCV Travel Award, 2019.</td></tr> 	
+		<tr><td>ICCV Student Travel Award, 2019.</td></tr> 	
 		<tr><td> The 1st place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 2: Perceptual. <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> The 2nd place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 1: Fidelity. <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> The 4th place and "Geek Award" in Alibaba - <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"Youku Video Enhancement and Super Resolution Challenge"</a> <b>(4/1514)</b>, 2019.</td></tr>
@@ -161,7 +161,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 807] [Highest Citation: 418] </h2>
+<h2>Selected Publications [Total Citations: 813] [Highest Citation: 420] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
@@ -310,11 +310,12 @@
 		<td width="206">
 		<img src="./indexpics/ASRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Adjustable Super-Resolution Network via Deep Supervised Learning and Progressive Self-Distillation</a><br>
+		<td> <a href="paper/ASRN.pdf" target="_blank">Adjustable Super-Resolution Network via Deep Supervised Learning and Progressive Self-Distillation</a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang.
 		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
 		<font color="red">SCI-2.</font><br>
 		<a href="", target="_blank">[Paper]</a>
+		<a href="paper/ASRN.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -333,7 +334,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. 252 stars and 59 forks in Github. [Citations: 400+]</font><br>
+		<font color="red">Top computer vision conference. 258 stars and 58 forks in Github. [Citations: 400+]</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -459,11 +460,12 @@
 		<td width="206">
 		<img src="./indexpics/MDRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation <font color="red">【New】</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.13873.pdf" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation <font color="red">【New】</font></a><br>
 		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng*, and Guixu Zhang
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
-		<a href="", target="_blank">[Paper]</a>
+		<a href="paper/MDRN.pdf", target="_blank">[Paper]</a>
+		<a href="poster/MDRN.pdf", target="_blank">[Poster]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -480,6 +482,7 @@
 		<font color="red">NTIRE</font><br>
 		<a href="paper/ESRT.pdf", target="_blank">[Paper]</a>
 		<a href="paper/ESRT-supp.pdf", target="_blank">[Supp]</a>
+		<a href="poster/ESRT.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/luissen/ESRT", target="_blank">[Code]</a>
 		<a href="projects/ESRT", target="_blank">[Homepage]</a>
 		</td>
