--- a/index_zw.html
+++ b/index_zw.html
@@ -116,7 +116,7 @@
 		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
 		<tr><td>博士生科研创新基金项目, 华东师范大学, 2020.</td></tr> 	
 		<tr><td>研究生奖学金, 华东师范大学, 2016-2020.</td></tr> 	
-		<tr><td>ICCV 旅行资助, 2019.</td></tr> 	
+		<tr><td>ICCV学生旅行资助, 2019.</td></tr> 	
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的感知赛道的全球第一名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的保真赛道的全球第二名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"阿里巴巴 - 优酷视频增强和超分辨率挑战赛"</a>全国第四名 和 “极客奖”, <b>(4/1514)</b>, 2019.</td></tr>
@@ -157,7 +157,7 @@
 
 
 
-<h2>精选出版物 [总引用: 807] [最高引用: 418] </h2>
+<h2>精选出版物 [总引用: 813] [最高引用: 420] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
@@ -309,7 +309,7 @@
 		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang
 		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
 		<font color="red">SCI-2.</font><br>
-		<a href="", target="_blank">[论文]</a>
+		<a href="paper/ASRN.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -326,7 +326,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。在GitHub上有252颗Star，59个Fork。【引用：400+】</font><br>
+		<font color="red">计算机视觉顶级会议。在GitHub上有258颗Star，58个Fork。【引用：400+】</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
@@ -448,11 +448,12 @@
 		<td width="206">
 		<img src="./indexpics/MDRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation <font color="red">【New】</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.13873.pdf" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation <font color="red">【New】</font></a><br>
 		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng*, and Guixu Zhang
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
-		<a href="", target="_blank">[论文]</a>
+		<a href="paper/MDRN.pdf", target="_blank">[论文]</a>
+		<a href="poster/MDRN.pdf", target="_blank">[海报]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -469,6 +470,7 @@
 		<font color="red">NTIRE</font><br>
 		<a href="paper/ESRT.pdf", target="_blank">[论文]</a>
 		<a href="paper/ESRT-supp.pdf", target="_blank">[补充材料]</a>
+		<a href="poster/ESRT.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/luissen/ESRT", target="_blank">[代码]</a>
 		<a href="projects/ESRT", target="_blank">[主页]</a>
 		</td>
