--- a/index_zw.html
+++ b/index_zw.html
@@ -522,6 +522,7 @@
 		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">组织者</font><br>
 		<a href="paper/NTIRE2022.pdf", target="_blank">[论文]</a>
+		<a href="video/NTIRE Stereo Image SR Challenge.mp4", target="_blank">[视频]</a>
 		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[主页]</a>
 		</td>
 	</tr>
