--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@
 		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">Co-Organizer</font><br>
 		<a href="paper/NTIRE2022.pdf", target="_blank">[Paper]</a>
+		<a href="video/NTIRE Stereo Image SR Challenge.mp4", target="_blank">[Video]</a>
 		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
