--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
 		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
 		<b>Juncheng Li#</b>, Zehua Pei#, and Tieyong Zeng*.
 		<p><em>arXiv 2109.14335</em>, 2021.<br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
+		&type=star&count=true&size=small" frameborder="0" scrolling="0" width="160px" height="25px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
+		&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="160" height="25" title="GitHub"></iframe><br>
 		<a href="paper/SISR_2021.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[Homepage]</a>
 		</td>
@@ -228,6 +232,8 @@
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="160px" height="25px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="160" height="25" title="GitHub"></iframe><br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
@@ -247,6 +253,8 @@
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="160px" height="25px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="160" height="25" title="GitHub"></iframe><br>
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
