--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
 		<b>Juncheng Li#</b>, Zehua Pei#, and Tieyong Zeng*.
 		<p><em>arXiv 2109.14335</em>, 2021.<br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
-		&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
-		&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="170px" height="30px" title="GitHub"></iframe><br>
+		&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe><br>
 		<a href="paper/SISR_2021.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[Homepage]</a>
 		</td>
@@ -232,8 +230,7 @@
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="170px" height="30px" title="GitHub"></iframe><br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe><br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
@@ -253,8 +250,7 @@
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="170px" height="30px" title="GitHub"></iframe><br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe><br>
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
@@ -343,8 +339,7 @@
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
 		<font color="red">Top computer vision conference. [Citations: 430+]</font><br>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="170px" height="30px" title="GitHub"></iframe><br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -542,6 +537,8 @@
 		<p><em>CVPR NTIRE</em>, 2022.<br>
 		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">Co-Organizer</font><br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=The-Learning-And-Vision-Atelier-LAVA&repo=Stereo-Image-SR
+		Public&type=star&count=true&size=small" frameborder="0" scrolling="0" width="170px" height="30px"></iframe><br>
 		<a href="paper/NTIRE2022.pdf", target="_blank">[Paper]</a>
 		<a href="video/NTIRE Stereo Image SR Challenge.mp4", target="_blank">[Video]</a>
 		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[Homepage]</a>
