--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 889] [Highest Citation: 444] </h2>
+<h2>Selected Publications [Total Citations: 893] [Highest Citation: 445] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
@@ -411,7 +411,7 @@
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
-		<font color="red">Top artificial intelligence conference.</font><br>
+		<font color="red">Top artificial intelligence conference. Short Oral Presentation</font><br>
 		<a href="paper/IJCAI2022.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[Code]</a>
 		<a href="https://guangweigao.github.io/IJCAI22/LBNet.html", target="_blank">[Homepage]</a>
