--- a/index_zw.html
+++ b/index_zw.html
@@ -157,7 +157,7 @@
 
 
 
-<h2>精选出版物 [总引用: 889] [最高引用: 444] </h2>
+<h2>精选出版物 [总引用: 893] [最高引用: 445] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
@@ -403,7 +403,7 @@
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
-		<font color="red">人工智能顶会.</font><br>
+		<font color="red">人工智能顶会. 短口头报告（Short Oral Presentation）</font><br>
 		<a href="paper/IJCAI2022.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[代码]</a>
 		<a href="https://guangweigao.github.io/IJCAI22/LBNet.html", target="_blank">[主页]</a>
