--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the PhD from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. I received several premium awards, including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 international journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL. If you are interested in my research or have any questions, feel free to contact me!
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the PhD from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. I received several premium awards, including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 international journals/conferences, including TIP, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL. If you are interested in my research or have any questions, feel free to contact me!
 </p>
 
 
@@ -193,6 +193,20 @@
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>arXiv 2204.08696</em>, 2022.<br>
 		<a href="paper/CTCNet.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2207.02796.pdf" target="_blank">Cross-receptive Focused Inference Network for Lightweight Image Super-Resolution</a><br>
+		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao*, Jiantao Zhou, Jian Yang, and Guo-Jun Qi.
+		<p><em>arXiv 2207.02796</em>, 2022.<br>
+		<a href="paper/CFIN.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
