--- a/index_zw.html
+++ b/index_zw.html
@@ -64,7 +64,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授 共同指导。我的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。我在著名的期刊和会议上发表了20余篇论文，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括TIP、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个国际期刊会议审稿人。如果您对我的研究感兴趣或有任何疑问，请随时与我联系！
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授 共同指导。我的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。我在著名的期刊和会议上发表了20余篇论文，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括TIP、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个国际期刊会议审稿人。如果您对我的研究感兴趣或有任何疑问，请随时与我联系！
 </p>
 
 <h2>最新消息</h2>
@@ -189,6 +189,20 @@
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>arXiv 2204.08696</em>, 2022.<br>
 		<a href="paper/CTCNet.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2207.02796.pdf" target="_blank">Cross-receptive Focused Inference Network for Lightweight Image Super-Resolution</a><br>
+		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao*, Jiantao Zhou, Jian Yang, and Guo-Jun Qi.
+		<p><em>arXiv 2207.02796</em>, 2022.<br>
+		<a href="paper/CFIN.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
