--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 893] [Highest Citation: 445] </h2>
+<h2>Selected Publications [Total Citations: 903] [Highest Citation: 446] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
@@ -207,6 +207,20 @@
 		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao*, Jiantao Zhou, Jian Yang, and Guo-Jun Qi.
 		<p><em>arXiv 2207.02796</em>, 2022.<br>
 		<a href="paper/CFIN.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/SMGARN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2207.04754.pdf" target="_blank">Snow Mask Guided Adaptive Residual Network for Image Snow Removal</a><br>
+		Bodong Cheng, <b>Juncheng Li*</b>, Ying Chen*, Shuyi Zhang, and Tieyong Zeng
+		<p><em>arXiv 2207.04754</em>, 2022.<br>
+		<a href="paper/SMGARN.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
