--- a/index_zw.html
+++ b/index_zw.html
@@ -157,7 +157,7 @@
 
 
 
-<h2>精选出版物 [总引用: 893] [最高引用: 445] </h2>
+<h2>精选出版物 [总引用: 903] [最高引用: 446] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
@@ -208,6 +208,17 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/SMGARN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2207.04754.pdf" target="_blank">Snow Mask Guided Adaptive Residual Network for Image Snow Removal</a><br>
+		Bodong Cheng, <b>Juncheng Li*</b>, Ying Chen*, Shuyi Zhang, and Tieyong Zeng
+		<p><em>arXiv 2207.04754</em>, 2022.<br>
+		<a href="paper/SMGARN.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
 </tbody></table>
 
 <h4>期刊论文</h4>
